--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "tailwindcss build app/globals.css -o public/globals.css"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -14,6 +15,8 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styles": "^5.15.15",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
